nicknamer/server/tests/snapshots/names_endpoints_tests__post_endpoint_returns_table_fragment_not_full_page.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: table_fragment_not_full_page
status: 200
headers:
  content-length: "1374"
  content-type: text/html; charset=utf-8
html_body:
  - ""
  - "<div class=\"overflow-x-auto\">"
  - "  <table class=\"table table-zebra w-full\">"
  - "    <thead>"
  - "      <tr>"
  - "        <th>Discord ID</th>"
  - "        <th>Name</th>"
  - "        <th></th>"
  - "      </tr>"
  - "    </thead>"
  - "    <tbody>"
  - "      "
  - "      <tr>"
  - "        <td>777888999</td>"
  - "        <td class=\"font-semibold\">FragmentTestUser</td>"
  - "        <th>"
  - "          <button"
  - "            class=\"btn btn-error btn-sm\""
  - "            hx-delete=\"/names/1\""
  - "            hx-target=\"#names-table\""
  - "            hx-confirm=\"Are you sure you want to delete this name entry?\""
  - "          >"
  - "            <svg"
  - "              xmlns=\"http://www.w3.org/2000/svg\""
  - "              class=\"h-4 w-4\""
  - "              fill=\"none\""
  - "              viewBox=\"0 0 24 24\""
  - "              stroke=\"currentColor\""
  - "            >"
  - "              <path"
  - "                stroke-linecap=\"round\""
  - "                stroke-linejoin=\"round\""
  - "                stroke-width=\"2\""
  - "                d=\"M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16\""
  - "              />"
  - "            </svg>"
  - "            Delete"
  - "          </button>"
  - "        </th>"
  - "      </tr>"
  - "      "
  - "    </tbody>"
  - "  </table>"
  - "</div>"
  - ""
  - ""
  - ""
  - "<div class=\"stats stats-horizontal shadow mt-6\">"
  - "  <div class=\"stat\">"
  - "    <div class=\"stat-title\">Total Names</div>"
  - "    <div class=\"stat-value\">1</div>"
  - "    <div class=\"stat-desc\">Names in database</div>"
  - "  </div>"
  - "</div>"
